hphp/test/zend7/Zend/tests/ns_038.php.expectf
ok

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sns_038.php on line 7